--- a/config
+++ b/config
@@ -42,27 +42,27 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # Focus window
 # Focus to the left window
-bindsym $mod+j focus left
+bindsym $mod+h focus left
 # Focus to the bottom window
-bindsym $mod+k focus down
+bindsym $mod+j focus down
 # Focus to the top window
-bindsym $mod+l focus up
+bindsym $mod+k focus up
 # Focus to the right window
-bindsym $mod+odiaeresis focus right
+bindsym $mod+l focus right
 
 # Move window
 # Move window to the left
-bindsym $mod+Shift+j move left
+bindsym $mod+Shift+h move left
 # Move window to the botton
-bindsym $mod+Shift+k move down
+bindsym $mod+Shift+j move down
 # Move window to the top
-bindsym $mod+Shift+l move up
+bindsym $mod+Shift+k move up
 # Move window to the right
-bindsym $mod+Shift+odiaeresis move right
+bindsym $mod+Shift+l move right
 
 # Split
 # split horizontal
-bindsym $mod+h split h
+bindsym $mod+| split h
 # split vertical
 bindsym $mod+v split v
 
@@ -121,13 +121,13 @@ bindsym $mod+Shift+0 move container to workspace 10
 # Resize shortcuts
 mode "resize" {
 	# Pressing left will shrink the window’s width.
-        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
 	# Pressing right will grow the window’s width.
-        bindsym k resize grow height 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
 	# Pressing up will shrink the window’s height.
-        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
 	# Pressing down will grow the window’s height.
-        bindsym odiaeresis resize grow width 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
 	# Escape "resize" mode with enter
         bindsym Return mode "default"
