--- a/config
+++ b/config
@@ -134,3 +134,27 @@ mode "resize" {
 	# Excape "resize" mode with escape
         bindsym Escape mode "default"
 }
+
+# Pulse Audio controls
+# Increase sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+# Decrease sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+# Mute sound
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+
+# Screen brightness
+# increase screen brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20
+# Decrease screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20
+
+# Media player
+# Play the media player
+bindsym XF86AudioPlay exec playerctl play
+# Pause the media player
+bindsym XF86AudioPause exec playerctl pause
+# Next title in the media player
+bindsym XF86AudioNext exec playerctl next
+# Previous title in the media player
+bindsym XF86AudioPrev exec playerctl previous
