--- a/config
+++ b/config
@@ -17,18 +17,21 @@ set $up "k"
 set $right "l"
 set $left "h"
 # Workspace names
-set $workspace1 "1: "
-set $workspace2 "2: "
-set $workspace3 "3: "
-set $workspace4 "4:"
-set $workspace5 "5:"
-set $workspace6 "6:"
-set $workspace7 "7:"
-set $workspace8 "8:"
-set $workspace9 "9:"
-set $workspace0 "10:"
+set $workspace1 "1 "
+set $workspace2 "2 "
+set $workspace3 "3 "
+set $workspace4 "4 "
+set $workspace5 "5 "
+set $workspace6 "6"
+set $workspace7 "7"
+set $workspace8 "8"
+set $workspace9 "9"
+set $workspace0 "10"
 # Assignments
 assign [class="Chromium-browser"] $workspace2
+assign [class="Git-gui"] $workspace5
+assign [class="Gitk"] $workspace5
+
 
 # I3 Bar
 bar {
