--- a/config
+++ b/config
@@ -32,10 +32,32 @@ assign [class="Chromium-browser"] $workspace2
 assign [class="Git-gui"] $workspace5
 assign [class="Gitk"] $workspace5
 
+# Colors
+set $bg-color			#2f343f
+set $inactive-bg-color		#2f343f
+set $text-color 		#f3f4f5
+set $inactive-text-color	#676E7D
+set $urgent-bg-color		#E53935
 
+#			border			background		text			indicator
+client.focused		$bg-color		$bg-color		$text-color		#00ff00
+client.unfocused	$inactive-bg-color	$inactive-bg-color	$inactive-bg-color	#00ff00
+client.focused_inactive	$inactive-bg-color	$inactive-bg-color	$inactive-text-color	#00ff00
+client.urgent		$urgent-bg-color	$urgent-bg-color	$text-color		#00ff00
+
+# Borders
+hide_edge_borders both
 # I3 Bar
 bar {
         status_command i3status
+	colors {
+		background	$bg-color
+		separator	#757575
+		#			border			background		text
+		focused_workspace	$bg-color		$bg-color		$text-color
+		inactive_workspace	$inactive-bg-color	$inactive-bg-color	$inactive-text-color
+		urgent_workspace	$urgent-bg-color	$urgent-bg-color	$text-color
+	}
 }
 
 # SHORTCUTS
