--- a/config
+++ b/config
@@ -11,6 +11,7 @@ font pango:System San Francisco Display 8
 floating_modifier $mod
 # Wallpaper
 exec_always feh --bg-scale ~/Pictures/wallpaper.*
+exec_always compton
 # Move settings
 set $down "j"
 set $up "k"
