--- a/config
+++ b/config
@@ -65,7 +65,7 @@ bar {
 # Lock laptop with shortcut
 #bindsym $mod+shift+l exec
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xterm -e tmux -2
 # kill focused window
 bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
